--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+    display: flex;
+    justify-content: center;
 }
 
 .game-container {
     height: 730px;
     width: 500px;
     position: absolute;
+    left: 520px;
+    top: 100px;
 }
 
 .sky {
@@ -23,6 +24,7 @@
     position: absolute;
     top: 580px;
     background-color: brown;
+    z-index: +1;
 }
 
 .bird {
@@ -32,8 +34,16 @@
     background-color: yellow;
 }
 
-.obstacle {
+.bottomObstacle {
     background-color: green;
+    width: 60px;
+    height: 300px;
+    position: absolute;
+}
+
+.topObstacle {
+    background-color: green;
+    transform: rotate(180deg);
     width: 60px;
     height: 300px;
     position: absolute;
